test/types/file/freadNotABoolean.good
freadNotABoolean.chpl:5: error: Unhandled system error: bad format (1002) in channel.read(inout a:bool) with path freadNotABoolean.txt offset 0
